@@ -10,7 +10,7 @@ require "selectize-rails"
 require "administrate/namespace"
 require "administrate/page/form"
 require "administrate/page/show"
-require "administrate/page/table"
+require "administrate/page/collection"
 require "administrate/order"
 require "administrate/resource_resolver"
 require "administrate/search"
